# debate_mfxb

./: .env  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  test.md  test_system.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
examples/: frontend_integration.js  index.html
src/: agent.py  llmconfig.py  prompt.py  state.py  to_do.md  workflow.py
src/api/: main.py
src/api/routes/: sessions.py  websocket.py
src/api/websocket/: manager.py
src/schemas/: message.py  session.py
src/services/: court_service.py
